--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -29,5 +29,45 @@
             android:textColor="@color/black"
             android:layout_below="@+id/email"
             />
+
+        <TextView
+            android:id="@+id/userAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_below="@+id/email_list"
+            android:text="User Address"
+            android:textColor="@color/purple_200" />
+
+        <TextView
+            android:id="@+id/userAddress_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User Address"
+            android:textColor="@color/black"
+            android:layout_below="@+id/userAddress"
+            />
+
+
+        <TextView
+            android:id="@+id/userType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_below="@+id/userAddress_list"
+            android:text="User Type"
+            android:textColor="@color/purple_200" />
+
+        <TextView
+            android:id="@+id/userType_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User Type"
+            android:textColor="@color/black"
+            android:layout_below="@+id/userType"
+            />
+
+
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
